add meta tags for search engines

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- meta tags for search engine-->
+    <meta name="description" content="Love running, Club for running in Leeds, England.">
+    <meta name="keywords" content="love running, running, leeds">
     <!-- Title -->
     <title>Love Running</title>
     <!-- Favicon -->
