added main structure to body

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- meta tags for search engine-->
-    <meta name="description" content="Love running, Club for running in Leeds, England.">
-    <meta name="keywords" content="love running, running, leeds">
+    <meta
+      name="description"
+      content="Love running, Club for running in Leeds, England."
+    />
+    <meta name="keywords" content="love running, running, leeds" />
     <!-- Title -->
     <title>Love Running</title>
     <!-- Favicon -->
@@ -28,5 +31,9 @@
       href="assets/favicon/favicon-16x16.png"
     />
   </head>
-  <body></body>
+  <body>
+    <header>Header</header>
+    <main>Main Content</main>
+    <footer>Footer</footer>
+  </body>
 </html>
