--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="assets/favicon/favicon-16x16.png"
+      href="assets/favicon/favicon-16x16.png"   
     />
+    <link rel="stylesheet" href="/assets/css/style.css">
+
   </head>
   <body>
     <header>Header</header>
