--- a/index.html
+++ b/index.html
@@ -28,13 +28,14 @@
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="assets/favicon/favicon-16x16.png"   
+      href="assets/favicon/favicon-16x16.png"
     />
-    <link rel="stylesheet" href="/assets/css/style.css">
-
+    <link rel="stylesheet" href="/assets/css/style.css" />
   </head>
   <body>
-    <header>Header</header>
+    <header>
+      <a href="index.html"><h1 id="logo">Love Running</h1></a>
+    </header>
     <main>Main Content</main>
     <footer>Footer</footer>
   </body>
