--- a/index.html
+++ b/index.html
@@ -46,6 +46,21 @@
       </nav>
     </header>
     <main>Main Content</main>
-    <footer>Footer</footer>
+    <footer>
+      <ul>
+        <li>
+          <a
+            href="https://www.facebook.com"
+            target="_blank"
+            rel="noopener"
+            aria-label="Visit our Facebook page (opens in new tab)"
+            ><i class="fa-brands fa-facebook"></i></a
+          >
+        </li>
+      </ul>
+    </footer>
+
+    <!-- Font Awesome Kit-->
+    <script src="https://kit.fontawesome.com/9b933044e5.js" crossorigin="anonymous"></script>
   </body>
 </html>
