--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <header>
       <a href="index.html"><h1 id="logo">Love Running</h1></a>
       <input type="checkbox" name="nav-toggle" id="nav-toggle" />
-      <label for="nav-toggle" class="nav-toggle-label">X</label>
+      <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
       <nav>
         <ul id="menu">
           <li><a href="" class="active">Home</a></li>
@@ -54,13 +54,43 @@
             target="_blank"
             rel="noopener"
             aria-label="Visit our Facebook page (opens in new tab)"
-            ><i class="fa-brands fa-facebook"></i></a
-          >
+            ><i class="fa-brands fa-facebook"></i
+          ></a>
+        </li>
+        <li>
+          <a
+            href="https://www.x.com"
+            target="_blank"
+            rel="noopener"
+            aria-label="Visit our X page (opens in new tab)"
+            ><i class="fa-brands fa-x-twitter"></i
+          ></a>
+        </li>
+        <li>
+          <a
+            href="https://www.youtube.com"
+            target="_blank"
+            rel="noopener"
+            aria-label="Visit our youtube page (opens in new tab)"
+            ><i class="fa-brands fa-youtube"></i
+          ></a>
+        </li>
+        <li>
+          <a
+            href="https://www.instagram.com"
+            target="_blank"
+            rel="noopener"
+            aria-label="Visit our instagram page (opens in new tab)"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
         </li>
       </ul>
     </footer>
 
     <!-- Font Awesome Kit-->
-    <script src="https://kit.fontawesome.com/9b933044e5.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/9b933044e5.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
