--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </header>
     <main>Main Content</main>
     <footer>
-      <ul>
+      <ul id="social-networks">
         <li>
           <a
             href="https://www.facebook.com"
